# elasticsearch_practice

./: .flake8  .gitignore  .isort.cfg  README.md
backend/: pyproject.toml
backend/libs/: const.py
backend/libs/data/: words.txt
backend/scripts/: insert_wiki_word_to_es.py  prepare_bulk_insert_data.py
frontend/: next.config.js  package.json
frontend/pages/: index.js
frontend/static/: index.css
libs/: prepare_bulk_insert_data.py
